<resources>
    <string name="app_name">Sobat</string>
    <string name="login_failed">Login Gagal</string>
    <string name="facebook_app_id">171366233585138</string>
    <string name="fb_login_protocol_scheme">fb171366233585138</string>
    <string name="nickname_add">Buat nickname kamu</string>
    <string name="next">Lanjut</string>
    <string name="error_database">Terdapat kesalahan, Silahkan ulangi!</string>
    <string name="search">Cari konselor</string>
    <string name="search_chat">Cari chat</string>
    <string name="notification">Notifikasi</string>
    <string name="home">Beranda</string>
    <string name="chat">Obrolan</string>
    <string name="forum">Forum</string>
    <string name="donation">Donasi</string>
    <string name="close_back_click">Tekan sekali lagi untuk keluar</string>
    <string name="profile">Profil</string>
    <string name="text_chat">Tulis curhatan kamu</string>
    <string name="curhat">Curhat</string>
    <string name="money_don">Donasi uang tunai</string>
    <string name="ads_don">Donasi iklan</string>
    <string name="expert_don">Donasi tenaga ahli</string>
    <string name="description_don">
        Ulurkan bantuanmu untuk saudaramu. Mari bersama berkomitmen membangun Indonesia sehat.
    </string>
    <string name="conselor">Konselor</string>
    <string name="pop_cons">Polpuler Konselor</string>
    <string name="success_curhat">Sukses mengirimkan ke konselor, silahkan tunggu beberapa menit</string>
    <string name="add">Tambah</string>
    <string name="archive">Arsip</string>
</resources>
