<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="id.sobat.sobat.FragmentMain.HomeFragment"
    android:background="@color/grey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/curhat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_curhat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="120dp"
                    android:hint="@string/text_chat"
                    android:inputType="textMultiLine"
                    android:gravity="top"
                    android:padding="8dp"
                    android:background="@color/white" />

                <Button
                    android:id="@+id/btn_curhat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/curhat"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/ic_launcher_background"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/pop_conselor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pop_cons"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:padding="4dp"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_pop_conselor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
